--- a/business-landing-page/styles.css
+++ b/business-landing-page/styles.css
@@ -53,6 +53,9 @@ img {
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
 }
 
+.navbar li{
+    
+}
 .header {
     display: flex;
     justify-content: space-between;
