--- a/business-landing-page/styles.css
+++ b/business-landing-page/styles.css
@@ -114,3 +114,62 @@ img {
     border-radius: 3.5rem;
     border: none;
 }
+
+/* Features section */
+.features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.features__title {
+    font-size: 4.8rem;
+    font-weight: 700;
+    margin-bottom: 3rem;
+}
+
+.features__paragraph {
+    font-size: 2.8rem;
+    max-width: 60rem;
+    margin-bottom: 5rem;
+    color: #374754;
+}
+
+.features__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.features__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 65rem;
+    gap: 2.4rem;
+}
+
+.feautures__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.features__video {
+    max-width: 100rem;
+    position: relative;
+}
+
+.features__video::after {
+    content: '';
+    display: block;
+    background-image: url('./images/icons/play_icon.svg');
+    width: 10rem;
+    height: 10rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-size: cover;
+    cursor: pointer;
+}
