--- a/business-landing-page/styles.css
+++ b/business-landing-page/styles.css
@@ -1,4 +1,5 @@
 /* Global styles */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --primary: #2091F9;
@@ -172,4 +173,129 @@ img {
     transform: translate(-50%, -50%);
     background-size: cover;
     cursor: pointer;
+}
+
+.information{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    flex-direction: row;
+
+    padding: 226px 82px;
+}
+
+.information .information__lateral *{
+    font-weight: 400;
+    letter-spacing: 0.2px;
+}
+
+.information .information__lateral .information__lateral___title{
+    color: #252B42;
+    font-size: 48px;
+    line-height: 55px;
+
+    width: 335px;
+}
+
+.information .information__lateral .information__lateral__paragraph{
+    color: #374754;
+    font-size: 28px;
+    width: 532px;
+}
+
+.btn{
+    color: white;
+    background-color: #2091F9;
+    padding: 16px 0;
+    border-radius: 35px;
+    border: 1px solid #2091F9;
+    width: 236px;
+    height: 60px;
+
+    transition: opacity 0.25s;
+}
+
+.btn:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.information .information__lateral .information__image{
+    width: 600px;
+}
+
+
+.newsletter{
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    /* padding: 0 50px; */
+}
+
+.newsletter .newsletter__image img{
+    width: 800px;
+}
+
+.newsletter .newsletter__info{
+    width: 544px;
+    padding: auto 63px;
+}
+
+.newsletter .newsletter__info{
+    color: #252B42;
+
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.newsletter .newsletter__info *{
+    margin: 0;
+}
+.newsletter .newsletter__info > div {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
+.newsletter .newsletter__info .newsletter__fingertips{
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.newsletter .newsletter__info h2,
+.newsletter .newsletter__info p{
+    max-width: 325px;
+}
+
+.newsletter .newsletter__info h2{
+    font-size: 48px;
+    font-weight: 300;
+}
+
+.newsletter .newsletter__info h3{
+    font-size: 16px;
+}
+
+.newsletter .newsletter__info p{
+    color: #374754;
+    font-weight: 400;
+}
+
+
+.newsletter .newsletter__info .newsletter__actions .newsletter__actions__email{
+    border-radius: 39px;
+    padding: 19px 39px;
+    border: 1px solid #c9c8c8;
+    width: 273px;
+    height: 54px;
+
+    font-size: 14px;
+    color: #18171D;
+}
+
+.newsletter .newsletter__info .newsletter__actions_suscribe{
+    width: 172px;
+    height: 58px;
 }
